--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
+.App-header {
+  margin: 30px 0px;
+}
+
 .App-logo {
   max-width: 200px;
   display: block;
   margin: 0 auto;
 }
 
-.App-header {
-  margin: 30px 0px;
+.App-footer {
+  margin: 30px 0;
+  text-align: center;
 }
