--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,45 @@
+.App-footer {
+  margin: 30px 0;
+  text-align: center;
+}
+
+.hero-image {
+  background-image: url("images/memphis.jpeg");
+  background-size: cover;
+  height: 300px;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: blue;
+}
+
 .App-header {
   margin: 30px 0px;
 }
 
 .App-logo {
-  max-width: 200px;
+  max-width: 175px;
   display: block;
   margin: 0 auto;
 }
 
-.App-footer {
-  margin: 30px 0;
-  text-align: center;
+body {
+  margin: 0;
+  background: #eceded;
+}
+
+p {
+  line-height: 1;
+}
+
+.container {
+  max-width: 800px;
 }
