--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,42 @@
+:root {
+  --first-color: #eceded;
+  --second-color: #d5344d;
+  --third-color: #8f8f8f;
+}
+
+body {
+  margin: 0;
+  background: var(--first-color);
+}
+
+h1 {
+  font-size: 50px;
+  color: var(--first-color);
+  text-align: center;
+  padding: 20px 10px 10px 10px;
+}
+
+h2 {
+  font-size: 42px;
+  color: var(--second-color);
+  text-align: center;
+}
+
+h4 {
+  font-size: 20px;
+  color: var(--third-color);
+  padding-bottom: 10px;
+}
+
+p {
+  line-height: 1.5;
+  font-size: 14px;
+  color: #252525;
+}
+
 .App-footer {
   margin: 30px 0;
   text-align: center;
-}
-
-.hero-image {
-  background-image: url("images/memphis.jpeg");
-  background-size: cover;
-  height: 300px;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: relative;
-}
-
-.hero-text {
-  text-align: center;
-  position: absolute;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: blue;
 }
 
 .App-header {
@@ -31,15 +49,67 @@
   margin: 0 auto;
 }
 
-body {
-  margin: 0;
-  background: #eceded;
-}
-
-p {
-  line-height: 1;
+.bold-text {
+  font-weight: 600;
+  display: inline;
+  color: var(--second-color);
 }
 
 .container {
-  max-width: 800px;
+  max-width: 850px;
+}
+
+.Dictionary input {
+  width: 100%;
+  border-radius: 6px;
+  border: 1px solid #252525;
+  color: var(--second-color);
+  padding: 5px 10px;
+}
+
+.Dictionary section {
+  background: #fff;
+  padding: 30px 25px;
+  margin: 18px 0;
+  border-radius: 12px;
+  box-shadow: 0px 3px 8px var(--third-color);
+}
+
+.footer-text {
+  font-size: 10px;
+  color: var(--third-color);
+  text-align: center;
+  padding-bottom: 20px;
+}
+
+.hero-image {
+  background: var(--second-color);
+  height: 300px;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  margin-top: 20px;
+}
+
+.phonetic-text {
+  color: #696969;
+  text-align: center;
+  display: block;
+}
+
+.word-block {
+  background: #fff;
+  padding: 30px;
+  margin: 20px 0;
 }
