--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,8 @@ p {
   padding: 30px 25px;
   margin: 18px 0;
   border-radius: 12px;
-  box-shadow: 0px 3px 8px var(--third-color);
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
 
 .footer-text {
@@ -90,6 +91,8 @@ p {
   position: relative;
   border-bottom-left-radius: 12px;
   border-bottom-right-radius: 12px;
+  box-shadow: rgb(50 50 93 / 95%) 0px 2px 5px -1px,
+    rgb(0 0 0 / 50%) 0px 1px 3px -1px;
 }
 
 .hero-text {
