--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,29 @@
 
 body {
   margin: 0;
-  background: var(--first-color);
+  font-family: "Work Sans", sans-serif;
+  background: linear-gradient(
+      25deg,
+      #eceded 40%,
+      transparent 41%,
+      transparent 59%,
+      #eceded 60%
+    ),
+    linear-gradient(
+      90deg,
+      transparent 45%,
+      #dddddd 45%,
+      #dddddd 55%,
+      transparent 55%,
+      transparent 20%,
+      #dddddd 20%,
+      #dddddd 30%,
+      transparent 30%
+    ),
+    linear-gradient(90deg, #dddddd 9%, transparent 10%);
+  background-size: 3em 3em;
+  background-color: #eceded;
+  opacity: 1;
 }
 
 h1 {
@@ -23,15 +45,23 @@ h2 {
 }
 
 h4 {
-  font-size: 20px;
+  font-size: 22px;
   color: var(--third-color);
   padding-bottom: 10px;
+}
+
+h1,
+h2,
+h4 {
+  font-family: "DM Serif Text", serif;
 }
 
 p {
   line-height: 1.5;
   font-size: 14px;
   color: #252525;
+  font-family: "Work Sans", sans-serif;
+  font-weight: 400;
 }
 
 .App-footer {
@@ -44,7 +74,7 @@ p {
 }
 
 .App-logo {
-  max-width: 175px;
+  max-width: 850px;
   display: block;
   margin: 0 auto;
 }
@@ -62,9 +92,10 @@ p {
 .Dictionary input {
   width: 100%;
   border-radius: 6px;
-  border: 1px solid #252525;
+  border: 1px solid #919191;
   color: var(--second-color);
   padding: 5px 10px;
+  font-weight: 300;
 }
 
 .Dictionary section {
@@ -84,8 +115,9 @@ p {
 }
 
 .hero-image {
-  background: var(--second-color);
-  height: 300px;
+  background-image: url("./logo.png");
+  height: 330px;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
@@ -95,18 +127,9 @@ p {
     rgb(0 0 0 / 50%) 0px 1px 3px -1px;
 }
 
-.hero-text {
-  text-align: center;
-  position: absolute;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #fff;
-  margin-top: 20px;
-}
-
 .phonetic-text {
   color: #696969;
+  font-weight: 500;
   text-align: center;
   display: block;
 }
