--- a/src/App.css
+++ b/src/App.css
@@ -134,6 +134,13 @@ p {
   display: block;
 }
 
+.Photos img {
+  border-radius: 8px;
+  margin-bottom: 20px;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
+    rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+
 .word-block {
   background: #fff;
   padding: 30px;
