--- a/src/App.css
+++ b/src/App.css
@@ -141,6 +141,12 @@ p {
     rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
 
+.sorry h2 {
+  font-size: 35px;
+  color: var(--second-color);
+  text-align: center;
+}
+
 .word-block {
   background: #fff;
   padding: 30px;
